--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,3 +16,9 @@ vscode:
   extensions:
     - svelte.svelte-vscode
 
+github:
+  prebuilds:
+    master: true
+    branches: true
+    pullRequests: true
+
